--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": " nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +18,16 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
-    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.17.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.2",
+    "sequelize-test-helpers": "^1.4.2",
+    "sinon": "^13.0.1",
+    "sinon-chai": "^3.7.0"
   }
 }
