--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,27 @@
-version: '3.4'
+version: '3.1'
 
 services:
- app:
-    image: app
-    build:
-         context: .
-         dockerfile: ./Dockerfile
-    environment:
-         NODE_ENV: production
-    ports: 
-      - 5000:5000   
- mysql:
-    image: mysql
-    container_name : mysql-container
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    ports: 3307:3306
-    environment:
-          MYSQL_ROOT_PASSWORD : root
-          MYSQL_DATABASE : livraison resto   
+     app:
+          build:
+               context: .
+               dockerfile: ./Dockerfile
+          container_name: app-container
+          env_file:
+               - ./.env
+          ports:
+               - 5000:5000
+          command: npm start
+          depends_on:
+               - mysql
+
+     mysql:
+          image: mysql:8.0.28
+          container_name : mysql-container
+          command: --default-authentication-plugin=mysql_native_password
+          restart: always
+          ports: 
+          - 3307:3306
+          environment:
+               MYSQL_ROOT_PASSWORD : root
+               MYSQL_DATABASE : livraison_resto
+
